tests/baselines/reference/iteratorSpreadInCall8.errors.txt
tests/cases/conformance/es6/spread/iteratorSpreadInCall8.ts(31,32): error TS2599: Argument of type 'string' is not assignable to parameter at position 1 of type 'symbol'.


==== tests/cases/conformance/es6/spread/iteratorSpreadInCall8.ts (1 errors) ====
    class Foo<T> {
        constructor(...s: T[]) { }
    }
    
    class SymbolIterator {
        next() {
            return {
                value: Symbol(),
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    class _StringIterator {
        next() {
            return {
                value: "",
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    new Foo(...new SymbolIterator, ...new _StringIterator);
                                   ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2599: Argument of type 'string' is not assignable to parameter at position 1 of type 'symbol'.